# E-Voting

e_voting_system/: Cargo.toml  README.md  rusttrust.db
e_voting_system/src/: admin.rs  auth.rs  db.rs  district.rs  election.rs  main.rs  models.rs  vote.rs  voter.rs
